--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,25 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <%= link_to "MyRecipes", "", class: "btn btn-large btn-success", id: "logo" %>
-      <div class="nav-item">
-        <%= link_to "link", "", class: "btn btn-default btn-warning" %>
-      </div>
-      <div class="nav-item">
-        <%= link_to "link", "", class: "btn btn-default btn-warning" %>
-      </div>
-      <div class="nav-item">
-        <%= link_to "link", "", class: "btn btn-default btn-warning" %>
-      </div>
-    </div>
-  </nav>
-<div class="container">
-  <%= yield %>
-  <div class="footer">
-    <p>&copy: MyRecipes 2015</p>
-  </div>
-</div>  
+  <%= render 'layouts/navigation' %>
+  <div class="container">
+    <%= yield %>
+    <%= render 'layouts/footer' %>
+  </div>  
 </body>
 </html>
