--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-    <%= link_to "MyRecipes", "", class: "btn btn-large btn-success", id: "logo" %>
+    <%= link_to "RecipeBox", "/", class: "btn btn-large btn-success", id: "logo" %>
     <div class="nav-item">
       <%= link_to "link", "", class: "btn btn-default btn-warning" %>
     </div>
